# gpt-term

./: Cargo.toml
src/: contexts.rs  file.rs  main.rs  model.rs
