[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json", "stream"] }
futures = "0.3"
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
clap = { version = "4.2.2", features = ["derive"] }
termimad = "0.20"
dirs = "3.0"
